CHanged flag from DEBUG to VERBOSE

--- a/increment-array/Makefile
+++ b/increment-array/Makefile
@@ -11,23 +11,23 @@ FILES := test_driver.c increment.c
 COMPILER := gcc
 TIS_OPTS := -val-profile interpreter -val -I.
 
-.PHONY: ut ut-debug ut-clang ut-long-name clean tis tis_gui
+.PHONY: ut ut-LOG_VERBOSE ut-clang ut-long-name clean tis tis_gui
 
 ut:
 	@echo -e "$(FONT_CYAN)$(COMPILER) -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
 	@$(COMPILER) -Wno-unused-value -I. $(FILES) -o $(TARGET) && ./$(TARGET)
 
 ut-debug:
-	@echo -e "$(FONT_CYAN)$(COMPILER) -DDEBUG -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
-	@$(COMPILER) -Wno-unused-value -DDEBUG -I. $(FILES) -o $(TARGET) && ./$(TARGET)
+	@echo -e "$(FONT_CYAN)$(COMPILER) -DLOG_VERBOSE -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
+	@$(COMPILER) -Wno-unused-value -DLOG_VERBOSE -I. $(FILES) -o $(TARGET) && ./$(TARGET)
 
 ut-clang:
-	@echo -e "$(FONT_CYAN)clang -DDEBUG -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
-	@clang -Wno-unused-value -DDEBUG -I. $(FILES) -o $(TARGET) && ./$(TARGET)
+	@echo -e "$(FONT_CYAN)clang -DLOG_VERBOSE -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
+	@clang -Wno-unused-value -DLOG_VERBOSE -I. $(FILES) -o $(TARGET) && ./$(TARGET)
 
 ut-long-name:
-	@echo -e "$(FONT_CYAN)$(COMPILER) -DDEBUG -DLONG_NAME -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
-	@$(COMPILER) -Wno-unused-value -DDEBUG -DLONG_NAME -I. $(FILES) -o $(TARGET) && ./$(TARGET)
+	@echo -e "$(FONT_CYAN)$(COMPILER) -DLOG_VERBOSE -DLONG_NAME -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
+	@$(COMPILER) -Wno-unused-value -DLOG_VERBOSE -DLONG_NAME -I. $(FILES) -o $(TARGET) && ./$(TARGET)
 
 tis:
 	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) $(FILES)$(FONT_RESET)"
