--- a/increment-array/Makefile
+++ b/increment-array/Makefile
@@ -11,13 +11,13 @@ FILES := test_driver.c increment.c logutils.c
 COMPILER := gcc
 TIS_OPTS := -val-profile interpreter -val -I.
 
-.PHONY: ut ut-LOG_VERBOSE ut-clang ut-long-name clean tis tis_gui
+.PHONY: ut ut-gcc ut-clang ut-gcc-tis clean tis tis_gui
 
 ut:
 	@echo -e "$(FONT_CYAN)$(COMPILER) -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
 	@$(COMPILER) -Wno-unused-value -I. $(FILES) -o $(TARGET) && ./$(TARGET)
 
-ut-debug:
+ut-gcc:
 	@echo -e "$(FONT_CYAN)$(COMPILER) -DLOG_VERBOSE -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
 	@$(COMPILER) -Wno-unused-value -DLOG_VERBOSE -I. $(FILES) -o $(TARGET) && ./$(TARGET)
 
@@ -25,7 +25,7 @@ ut-clang:
 	@echo -e "$(FONT_CYAN)clang -DLOG_VERBOSE -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
 	@clang -Wno-unused-value -DLOG_VERBOSE -I. $(FILES) -o $(TARGET) && ./$(TARGET)
 
-ut-long-name:
+ut-gcc-long:
 	@echo -e "$(FONT_CYAN)$(COMPILER) -DLOG_VERBOSE -DLONG_NAME -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
 	@$(COMPILER) -Wno-unused-value -DLOG_VERBOSE -DLONG_NAME -I. $(FILES) -o $(TARGET) && ./$(TARGET)
 
@@ -38,4 +38,4 @@ tis-gui:
 	@$(TIS_ANALYZER) $(TIS_OPTS) -gui
 
 clean:
-	@rm -rf $(TARGET)
+	@rm -rf $(TARGET) compile_commands.json
