--- a/new-demo/Makefile
+++ b/new-demo/Makefile
@@ -44,48 +44,61 @@ cov:
 	@gcov $(TARGET).c
 
 tis-l1-1:
-	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.small-array"$(FONT_RESET)"
-	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.small-array"
+	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.1.small-array"$(FONT_RESET)"
+	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.1.small-array"
 
 tis-l1-2:
-	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "2.large-array"$(FONT_RESET)"
-	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "2.large-array"
+	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.2.large-array"$(FONT_RESET)"
+	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.2.large-array"
+
+tis-l1-3:
+	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.3.zero-length-array"$(FONT_RESET)"
+	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.3.zero-length-array"
+
+
+tis-l1-3-gui:
+	$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.3.zero-length-array" -gui
+
+tis-l1-4:
+	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.4.null-array"$(FONT_RESET)"
+	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.4.null-array"
+
 
 count_ub:
 	@echo "==============================================="
-	@echo "      " `trustinsoft/count_ub.sh _results/[12].*-array_results.json` UNDEFINED BEHAVIORS FOUND
+	@echo "      " `trustinsoft/count_ub.sh _results/1.*-array_results.json` UNDEFINED BEHAVIORS FOUND
 	@echo "==============================================="
 
 count_ub_2:
 	@echo "==============================================="
-	@echo "      " `trustinsoft/count_ub.sh _results/3.generalized-small-array_results.json` UNDEFINED BEHAVIORS FOUND
+	@echo "      " `trustinsoft/count_ub.sh _results/2.*-array_results.json` UNDEFINED BEHAVIORS FOUND
 	@echo "==============================================="
 
 tis-l1-run-gui:
 	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.small-array" -gui$(FONT_RESET)"
-	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.small-array" -gui | grep -v '\[info\]'
+	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.small-array" -gui
 
 tis-l2-1:
-	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "3.generalized-small-array"$(FONT_RESET)"
-	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "3.generalized-small-array"
+	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "2.1.generalized-small-array"$(FONT_RESET)"
+	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "2.1.generalized-small-array"
 
 tis-l2-2:
-	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "4.generalized-large-array"$(FONT_RESET)"
-	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "4.generalized-large-array"
+	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "2.2.generalized-large-array"$(FONT_RESET)"
+	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "2.2.generalized-large-array"
 
 tis-l2-run-gui:
-	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "3.generalized-small-array" -gu$(FONT_RESET)"
-	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "3.generalized-small-array" -gui | grep -v '\[info\]'
+	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "2.1.generalized-small-array" -gu$(FONT_RESET)"
+	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "2.1.generalized-small-array" -gui
 
 clean:
 	@rm -rf $(TARGET) *.gc* compile_commands.json _results *.log tis_report.html
 
 #tis-l1: tis-l1-1 tis-l1-2 count_ub report
-tis-l1: tis-l1-1 count_ub report
+tis-l1: tis-l1-2 tis-l1-3 tis-l1-4 tis-l1-1 count_ub report
 
-tis-l1-gui: tis-l1-run-gui count_ub report
+tis-l1-gui: tis-l1-run-gui
 
-tis-l2: tis-l2-1 count_ub_2 report
+tis-l2: tis-l2-1 tis-l2-2 count_ub_2 report
 
 tis-l2-gui: tis-l2-run-gui count_ub_2 report
 
