Rename ut in test

--- a/new-demo/Makefile
+++ b/new-demo/Makefile
@@ -29,14 +29,14 @@ FILES := test_driver.c utils.c $(TARGET).c
 COMPILER := gcc
 TIS_OPTS := -tis-config-load trustinsoft/tis.json -tis-report
 
-.PHONY: all cov  tis-l1  tis-l1-gui tis-l1-run tis-l1-run-gui tis-l2 tis-l2-gui tis-l2-run tis-l2-run-gui report
+.PHONY: all test tis-l1  tis-l1-gui tis-l1-run tis-l1-run-gui tis-l2 tis-l2-gui tis-l2-run tis-l2-run-gui report
 
 
 all:
 	@echo -e "$(FONT_CYAN)$(COMPILER) -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
 	@$(COMPILER) -I. $(FILES) -o $(TARGET) && ./$(TARGET)
 
-cov:
+test:
 	@echo -e "$(FONT_CYAN)$(COMPILER) -I. -fprofile-arcs -ftest-coverage $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
 	@$(COMPILER) -I. -fprofile-arcs -ftest-coverage $(FILES) -o $(TARGET) && ./$(TARGET)
 	@echo ""
