--- a/subtle-ub/Makefile
+++ b/subtle-ub/Makefile
@@ -1,5 +1,5 @@
 # tis-examples
-# Copyright (C) 2022 TrustInSoft
+# Copyright (C) 2022-2023 TrustInSoft
 # mailto:contact AT trust-in-soft DOT com
 # 
 # This program is free software; you can redistribute it and/or
