Add test of seeds

--- a/fuzzing/Makefile
+++ b/fuzzing/Makefile
@@ -50,3 +50,7 @@ clean:
 afl:
 	/usr/bin/afl-gcc $(FILES) -o $(TARGET)-afl
 	afl-fuzz -i input-files -o afl-results -- ./$(TARGET)-afl
+
+test-seeds:
+	gcc $(FILES) -o $(TARGET)
+	./run_test.sh
