--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ fuzzing/afl-results*/
 fuzzing/calc-*
 fuzzing/tis-fuzz-results/*
 fuzzing/seeds/seed-*smart*.txt
+target-awareness/target
+target-awareness/tis_report*.html
