Reorg files ignored

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,21 @@
 **/.vscode/
 **/compile_commands.json
-**/afl-results/
 **/*.gcda
 **/*.gcno
 **/*.gcov
 **/_results/
 **/*.json
-new-demo/increment
-overapprox/approx
-**/tis_report.html
+**/tis_report*.html
 **/tis_misra_report/**
-subtle-ub/demo-ub
+
+**/afl-results/
 fuzzing/afl-results*/
 fuzzing/calc-*
 fuzzing/tis-fuzz-results/*
 fuzzing/seeds/seed-*smart*.txt
+
+subtle-ub/demo-ub
+new-demo/increment
+overapprox/approx
 target-awareness/target
-target-awareness/tis_report*.html
+
