Ignore new demo C++ logs

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ target-awareness/tis_report.*.html
 caesar-cpp/caesar
 new-demo-cpp/.tis-kernel/
 new-demo-cpp/increment
+new-demo-cpp/trustinsoft/*.log
+new-demo/*.log
