Ignore all logs

--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,4 @@ target-awareness/tis_report.*.html
 caesar-cpp/caesar
 new-demo-cpp/.tis-kernel/
 new-demo-cpp/increment
-new-demo-cpp/.trustinsoft/*.log
-new-demo/logs/*.log
+**/logs/*.log
