--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,4 @@ target-awareness/tis_report.*.html
 caesar-cpp/caesar
 new-demo-cpp/.tis-kernel/
 new-demo-cpp/increment
-**/logs/*.log
+**/.trustinsoft/**
